--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,9 @@
             "styles": [
               "src/custom-theme.scss",
               "src/styles.css",
-              "node_modules/ngx-spinner/animations/ball-beat.css"
-          
+              "node_modules/ngx-spinner/animations/ball-beat.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": []
           },
