--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "ngx-spinner": "^16.0.2",
+    "primeng": "^16.6.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.32",
     "tslib": "^2.3.0",
